@@ -18,6 +18,8 @@ Changes since 2.3.6 release
   - trim() localpart in create-mailbox to avoid mailbox names with leading space
   - mark vacation_notification.notified field as latin1 to avoid overlong index
   - vacation.pl: encode subject
+  - vacation.pl: disable use of TLS by default due to a bug in Mail::Sender 0.8.22
+    (you can re-enable it with $smtp_tls_allowed)
 
 Version 2.3.6 - 2013/01/02 - SVN r1417 (postfixadmin-2.3 branch)
 ----------------------------------------------------------------
